<resources>
    <string name="app_name">Covid Book</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add note</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_splash_screen">SplashActivity</string>
    <string name="api_key" translatable="false">AIzaSyCdObFA4dKAaD6nq7yvDLD8vGrdi3n2Gxg</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="image_chooser">Image Chooser</string>
    <string name="change_photo">Change profile image</string>
    <string name="your_notes">Your Notes</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="how_many_people_did_u_pass">How many people did u pass?</string>
    <string name="input_your_temperature">Input your temperature:</string>
    <string name="your_parameters">Your parameters</string>
    <string name="submit">Submit</string>
    <string name="how_do_you_feel_today">How do you feel today?</string>
    <string name="did_you_go_out_today">Did you go out today?</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="title_activity_emergency">EmergencyActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="tab_text_1">Info</string>
    <string name="tab_text_2">Advice</string>
    <string name="tab_text_3">Contact</string>
    <string name="check_your_statistics">Check your statistics</string>
    <string name="dot">.</string>
    <string name="temperature">C</string>
    <string name="icon">Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--   Emergency screen   -->
    <!--   Info   -->
    <string name="info_header">Information about Coronavirus</string>
    <string name="info_1">
        "Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus."\n\n
        "Most people infected with the COVID-19 virus will experience mild to moderate respiratory illness"
        "and recover without requiring special treatment.Older people, and those with underlying medical problems"
        "like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are more likely to develop serious illness."\n\n
        "The best way to prevent and slow down transmission is to be well informed about the COVID-19 virus, the disease it causes and how it spreads."
        "Protect yourself and others from infection by washing your hands or using an alcohol based rub frequently and not touching your face."\n\n
        "The COVID-19 virus spreads primarily through droplets of saliva or discharge from the nose when an infected person coughs or sneezes,"
        "so it’s important that you also practice respiratory etiquette (for example, by coughing into a flexed elbow)."

    </string>
    <string name="info_button_1">Protect yourself: advice for the public</string>
    <string name="info_button_2">Myth busters</string>
    <string name="info_button_3">Questions and answers</string>
    <string name="info_button_4">Situation reports</string>
    <string name="info_button_5">All information on the COVID-19 outbreak</string>
    <string name="stay_informed">Stay informed</string>
    <!--   Advice   -->
    <string name="advice_header">Stay safe!</string>
    <string name="advice_1">\n\nWash your hands</string>
    <string name="advice_2">\n\nPractice social distancing</string>
    <string name="advice_3">\n\nWear a mask</string>
    <string name="advice_4">\n\nTalk to your doctor before stopping any medication</string>
    <string name="advice_5">\n\nWork from home if you can</string>
    <string name="advice_6">\n\nDon’t ignore your own symptoms</string>
    <string name="advice_7">\n\nUnderstand your risk</string>
    <string name="advice_8">\n\nBe prepared for telemedicine</string>
    <string name="advice_9">\n\nIn person visits may be necessary</string>
    <string name="advice_10">\n\nTake care of your physical and mental health</string>
    <string name="follow_these_tips_to_stay_healthy">Follow these tips to stay healthy!</string>
    <string name="back_to_home">Back to Home</string>

</resources>