<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.emergency.FirstFragment">

            <TextView
                android:id="@+id/header_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/info_header"
                android:textColor="?colorPrimary"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/textview_first"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_first"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="50dp"
                android:text="@string/info_1"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/info_button_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/header_info" />

            <TextView
                android:id="@+id/stay_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/stay_informed"
                android:textColor="?colorPrimary"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/info_button_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_first" />

            <Button
                android:id="@+id/info_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:text="@string/info_button_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stay_info" />

            <Button
                android:id="@+id/info_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:text="@string/info_button_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_button_1" />

            <Button
                android:id="@+id/info_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:text="@string/info_button_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_button_2" />

            <Button
                android:id="@+id/info_button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:text="@string/info_button_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_button_3" />

            <Button
                android:id="@+id/info_button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="50dp"
                android:text="@string/info_button_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_button_4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>